# Template-hub

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.MD
actix-rust-backend/: .env.example  .gitignore  AGENTS.md  Cargo.toml  DETAILS.md  Dockerfile  README.md
actix-rust-backend/.husky/: pre-commit
actix-rust-backend/src/: app.rs  lib.rs  main.rs  server_lifecycle.rs
actix-rust-backend/src/config/: env.rs  mod.rs  swagger.rs
actix-rust-backend/src/errors/: app_error.rs  error_map.rs  http_errors.rs  mod.rs
actix-rust-backend/src/middleware/: error_handler.rs  mod.rs  not_found.rs  rate_limit.rs  request_context.rs  request_id.rs
actix-rust-backend/src/observability/: logger.rs  metrics.rs  mod.rs  tracing.rs
actix-rust-backend/src/routes/: health.rs  metrics.rs  mod.rs  ping.rs
actix-rust-backend/src/state/: readiness.rs
actix-rust-backend/src/types/: api.rs  context.rs
actix-rust-backend/tests/: error_handling_test.rs  error_map_test.rs  health_test.rs  metrics_test.rs  ping_test.rs  request_context_test.rs  server_lifecycle_test.rs
actix-rust-backend/tests/common/: mod.rs
axum-rust-backend/: .dockerignore  .env.example  AGENTS.md  Cargo.toml  DETAILS.md  Dockerfile  README.md
axum-rust-backend/.githooks/: pre-commit
axum-rust-backend/src/: app.rs  lib.rs  main.rs  server_lifecycle.rs
axum-rust-backend/src/config/: mod.rs
axum-rust-backend/src/errors/: mod.rs
axum-rust-backend/src/handlers/: mod.rs
axum-rust-backend/src/middleware/: mod.rs
axum-rust-backend/src/observability/: mod.rs
axum-rust-backend/src/repositories/: mod.rs
axum-rust-backend/src/routes/: mod.rs
axum-rust-backend/src/services/: mod.rs
axum-rust-backend/src/state/: mod.rs
axum-rust-backend/src/types/: mod.rs
axum-rust-backend/tests/: api_tests.rs
django-python-backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  DETAILS.md  Dockerfile  README.md  manage.py  pyproject.toml
django-python-backend/.husky/: pre-commit
django-python-backend/apps/api/: urls.py
django-python-backend/apps/api/errors/: app_error.py  error_map.py  http_errors.py
django-python-backend/apps/api/types/: api.py  context.py
django-python-backend/apps/api/views/: health.py  metrics.py  ping.py
django-python-backend/project/: asgi.py  env.py  logging.py  middleware.py  openapi.py  readiness.py  settings.py  urls.py  wsgi.py
django-python-backend/tests/: conftest.py  docs_test.py  error_handling_test.py  error_map_test.py  health_test.py  metrics_test.py  ping_test.py  rate_limit_test.py  ready_test.py  request_context_test.py  server_lifecycle_test.py
express-ts-bun-backend/: .env.example  AGENTS.md  DETAILS.md  README.md  biome.json  package.json
fastapi-python-backend/: .dockerignore  AGENTS.md  DETAILS.md  README.md  pyproject.toml
fastapi-python-backend/src/: app.py  server.py  server_lifecycle.py
fastapi-python-backend/src/config/: env.py  swagger.py
fastapi-python-backend/src/errors/: app_error.py  error_map.py  http_errors.py
fastapi-python-backend/src/middleware/: error_handler.py  rate_limit.py  request_context.py  request_id.py
fastapi-python-backend/src/observability/: http_logger.py  logger.py  metrics.py  tracing.py
fastapi-python-backend/src/routes/: __init__.py  health_route.py  metrics_route.py  ping_route.py
fastapi-python-backend/src/state/: readiness.py
fastapi-python-backend/src/types/: api.py  context.py
fastapi-python-backend/tests/: conftest.py  error_handling_test.py  error_map_test.py  health_test.py  metrics_test.py  ping_test.py  request_context_test.py  server_lifecycle_test.py
fastify-ts-bun-backend/: .dockerignore  AGENTS.md  DETAILS.md  README.md  package.json  tsconfig.json  vitest.config.ts
fiber-go-backend/: .dockerignore  .env.example  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  DETAILS.md  Dockerfile  Makefile  README.md  go.mod
flask-python-backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  DETAILS.md  Dockerfile  README.md  pyproject.toml
flask-python-backend/.husky/: pre-commit
flask-python-backend/src/: __init__.py  app.py  server.py  server_lifecycle.py
flask-python-backend/src/config/: env.py  swagger.py
flask-python-backend/src/errors/: __init__.py  app_error.py  error_map.py  http_errors.py
flask-python-backend/src/middleware/: __init__.py  error_handler.py  rate_limit.py  request_context.py  request_id.py
flask-python-backend/src/observability/: logger.py  metrics.py  tracing.py
flask-python-backend/src/routes/: health_route.py  metrics_route.py  ping_route.py
flask-python-backend/src/state/: __init__.py  readiness.py
flask-python-backend/src/types/: api.py  context.py
flask-python-backend/tests/: conftest.py  error_handling_test.py  error_map_test.py  health_test.py  metrics_test.py  ping_test.py  request_context_test.py  server_lifecycle_test.py
gin-go-backend/: .dockerignore  .editorconfig  .env.example  .gitignore  .golangci.yml  AGENTS.md  DETAILS.md  Dockerfile  README.md  go.mod
hono-ts-bun-backend/: .dockerignore  .gitignore  AGENTS.md  DETAILS.md  Dockerfile  README.md  biome.json  package.json  tsconfig.json  vitest.config.ts
laravel-php-backend/: .dockerignore  .env.example  AGENTS.md  DETAILS.md  Dockerfile  README.md  artisan  composer.json  phpunit.xml
nest-ts-bun-backend/: .gitignore  AGENTS.md  (+5 more)
(+219 files in other folders)
