[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-python-backend-template"
version = "1.0.0"
description = "Production-grade Django API template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "django>=5.1,<6.0",
  "prometheus-client>=0.23.1,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "python-json-logger>=2.0.7,<3.0.0",
  "whitenoise>=6.9.0,<7.0.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17.1,<2.0.0",
  "pytest>=8.4.1,<9.0.0",
  "pytest-django>=4.11.1,<5.0.0",
  "ruff>=0.12.8,<1.0.0"
]

[tool.setuptools]
packages = ["project", "apps", "apps.api", "apps.api.views", "apps.api.errors", "apps.api.middleware", "apps.api.types"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = "."
exclude = ["tests"]
